Implementing a way to add items to the shopping cart, and have to fix the issues regarding the marketplace not showing if there is less than 5 items.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -223,3 +223,19 @@ h1[th\:text] {
     max-width: 100%;
     height: auto;
 }
+.cartButton {
+    text-align: center;
+    text-decoration: none;
+    background-color: #438d50;
+    color: #ffffff;
+    font-size: 22px;
+    font-weight: bold;
+    padding: 0.7rem;
+    border-color: #438d50;
+    border-style: none;
+    transition: 0.3s;
+    width: 100%;
+}
+.cartButton:hover{
+    background-color: #3c8048;
+}
